--- a/src/main/resources/com/dylan/Menu.fxml
+++ b/src/main/resources/com/dylan/Menu.fxml
@@ -2,9 +2,9 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dylan.Menu">
    <children>
@@ -13,8 +13,8 @@
             <Font name="Comic Sans MS" size="50.0" />
          </font>
       </Text>
-      <JFXButton layoutX="175.0" layoutY="115.0" onAction="#goTask1" prefHeight="30.0" prefWidth="50.0" text="Task 1" />
-      <JFXButton layoutX="175.0" layoutY="160.0" onAction="#goTask2" prefHeight="30.0" prefWidth="50.0" text="Task 2" />
+      <JFXButton layoutX="150.0" layoutY="107.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#goTask1" prefHeight="30.0" prefWidth="100.0" text="Number Info" />
+      <JFXButton layoutX="125.0" layoutY="151.0" minWidth="-Infinity" onAction="#goTask2" prefHeight="30.0" prefWidth="150.0" text="Gues the Number" />
       <JFXToggleButton fx:id="radio" layoutX="284.0" layoutY="328.0" onAction="#musicToggle" text="Music" />
       <JFXButton layoutX="14.0" layoutY="357.0" onAction="#brexit" text="Exit" />
    </children>
