--- a/src/main/resources/com/dylan/Menu.fxml
+++ b/src/main/resources/com/dylan/Menu.fxml
@@ -14,7 +14,7 @@
          </font>
       </Text>
       <JFXButton layoutX="150.0" layoutY="107.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#goTask1" prefHeight="30.0" prefWidth="100.0" text="Number Info" />
-      <JFXButton layoutX="125.0" layoutY="151.0" minWidth="-Infinity" onAction="#goTask2" prefHeight="30.0" prefWidth="150.0" text="Gues the Number" />
+      <JFXButton layoutX="125.0" layoutY="151.0" minWidth="-Infinity" onAction="#goTask2" prefHeight="30.0" prefWidth="150.0" text="Guess the Number" />
       <JFXToggleButton fx:id="radio" layoutX="284.0" layoutY="328.0" onAction="#musicToggle" text="Music" />
       <JFXButton layoutX="14.0" layoutY="357.0" onAction="#brexit" text="Exit" />
    </children>
