--- a/src/main/resources/com/dylan/Task2.fxml
+++ b/src/main/resources/com/dylan/Task2.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dylan.Task2">
+<AnchorPane fx:id="background" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dylan.Task2">
    <children>
       <Text layoutX="28.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Random Finder">
          <font>
