--- a/src/main/resources/com/dylan/Task2.fxml
+++ b/src/main/resources/com/dylan/Task2.fxml
@@ -18,12 +18,12 @@
       <JFXButton layoutX="167.0" layoutY="122.0" onAction="#getRandArray" text="Generate" />
       <JFXButton layoutX="268.0" layoutY="90.0" onAction="#checkInArr" text="Submit" />
       <Separator layoutY="197.0" prefHeight="6.0" prefWidth="400.0" />
-      <Text fx:id="output" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="400.0" />
+      <Text fx:id="output" layoutX="1.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="400.0" />
       <Text layoutX="17.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You've Tried:" />
       <Text fx:id="tried" layoutX="17.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="343.9453125" />
       <Text layoutX="17.0" layoutY="223.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correctly Guessed" />
       <Text fx:id="guessed" layoutX="17.0" layoutY="240.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="343.9453125" />
       <JFXButton layoutX="14.0" layoutY="361.0" onAction="#back" text="Back" />
-      <Text fx:id="time" layoutX="150.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="100.0" />
+      <Text fx:id="time" layoutX="151.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="100.0" />
    </children>
 </AnchorPane>
